--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
-  "name": "serwis",
+  "name": "proto-as-serwis",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode development",
-    "prod": "webpack --mode production",
     "start": "webpack --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "browser-sync": "^2.24.4",
     "browser-sync-webpack-plugin": "^2.2.2",
     "css-loader": "^0.28.11",
-    "node-sass": "^4.8.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "jquery": "^3.3.1",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15"
-  },
-  "dependencies": {
-    "browser-sync": "^2.23.7"
+    "url-loader": "^1.0.1",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.4"
   }
 }
