--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.4"
+  },
+  "dependencies": {
+    "@glidejs/glide": "^3.0.4"
   }
 }
